[package]
name = "M3u8-Grabber"
version = "0.1.0"
description = "a m3u8 video downloader by Rust"
authors = ["frank"]
license = ""
repository = ""
default-run = "M3u8-Grabber"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = [] }
reqwest = { version = "0.11.18", features = ["blocking"] }
aes = "0.7.4"
block-modes = "0.8.1"
bytes = "1.4.0"
tokio = {version = "1.28.1", features = ["full"]}
anyhow = { version = "1.0"}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
